--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.30",
+    "@types/papaparse": "^5.3.16",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
+    "csv-loader": "^3.0.5",
     "dotenv-webpack": "^8.1.0",
     "eslint": "^8.57.1",
     "eslint-plugin-prettier": "^5.2.1",
@@ -69,12 +72,18 @@
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
+    "@patternfly/react-charts": "^8.2.2",
     "@patternfly/react-core": "^6.0.0",
     "@patternfly/react-icons": "^6.0.0",
     "@patternfly/react-styles": "^6.0.0",
+    "csv": "^6.3.11",
+    "csv-parser": "^3.2.0",
+    "fs": "^0.0.1-security",
+    "papaparse": "^5.5.3",
     "react": "^18",
     "react-dom": "^18",
-    "sirv-cli": "^3.0.0"
+    "sirv-cli": "^3.0.0",
+    "victory": "^37.3.6"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
