--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@patternfly/react-core": "^6.0.0",
     "@patternfly/react-icons": "^6.0.0",
     "@patternfly/react-styles": "^6.0.0",
+    "@patternfly/react-table": "^6.2.2",
     "csv": "^6.3.11",
     "csv-parser": "^3.2.0",
     "fs": "^0.0.1-security",
