--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^22.15.30",
     "@types/papaparse": "^5.3.16",
     "@types/react-router-dom": "^5.3.3",
+    "@types/xlsx": "^0.0.35",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "copy-webpack-plugin": "^12.0.2",
@@ -84,7 +85,8 @@
     "react": "^18",
     "react-dom": "^18",
     "sirv-cli": "^3.0.0",
-    "victory": "^37.3.6"
+    "victory": "^37.3.6",
+    "xlsx": "^0.18.5"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
